// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Logo renders correctly with props 1`] = `
.emotion-0 {
  background-color: var(--foreground);
  color: var(--background);
  font-size: 27px;
  font-weight: 700;
  height: 100px;
  left: 0;
  line-height: 100px;
  opacity: 1;
  position: fixed;
  text-align: center;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  top: 0;
  width: 250px;
  z-index: 10;
}

.emotion-0.isFullscreen {
  opacity: 0.65;
}

@media (min-width: 576px) {
  .emotion-0 {
    font-size: 37px;
    width: 400px;
  }
}

<div>
  <h1
    class="isFullscreen emotion-0"
  >
    <a
      href="/"
    >
      EYESBOUND
    </a>
  </h1>
</div>
`;

exports[`Logo renders correctly without props 1`] = `
.emotion-0 {
  background-color: var(--foreground);
  color: var(--background);
  font-size: 27px;
  font-weight: 700;
  height: 100px;
  left: 0;
  line-height: 100px;
  opacity: 1;
  position: fixed;
  text-align: center;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  top: 0;
  width: 250px;
  z-index: 10;
}

.emotion-0.isFullscreen {
  opacity: 0.65;
}

@media (min-width: 576px) {
  .emotion-0 {
    font-size: 37px;
    width: 400px;
  }
}

<div>
  <h1
    class="emotion-0"
  >
    <a
      href="/"
    >
      EYESBOUND
    </a>
  </h1>
</div>
`;
